# msync

./: .gitignore  Tiltfile  docker-compose.yml  pyproject.toml  tilt_option.json
backend/: Dockerfile  db.sqlite3  env_example  requirements.txt
backend/accounts/: models.py
backend/config/: celery.py  settings.py  urls.py
backend/imap_items/: admin.py  apps.py  models.py  send_email.py  serializers.py  sqs.py  taksks.py  tasks.py  urls.py  views.py
backend/requirements/: base.txt
backend/templates/: email.j2  email2.j2
backend/uploads/files/: email_accounts_GPQ1y9I.csv
deploy/: api.yaml  celery_workers.yaml
docker/: entrypoint-manage.sh
frontend/src/components/: UploadCSVButtons.js
frontend/src/components/upload/: UploadCSV.js  UploadSingleFile.js
frontend/src/pages/dashboard/: GeneralApp.js
msync-ses/: .gitignore  README.md  pyproject.toml
msync-ses/kms-policy/: kms-policy.json
msync-ses/modules/iam-role/: 01-variables.tf  02-data.tf  03-main.tf  04-outputs.tf
msync-ses/modules/lambda/: 01-variables.tf  02-data.tf  03-main.tf  04-outputs.tf
msync-ses/modules/sqs/: 01-variables.tf  02-data.tf  03-main.tf  04-outputs.tf
msync-ses/project/: 01-provider.tf  02-variables.tf  03-main.tf  04-kms.tf  04-outputs.tf  05-ses.tf  06-outputs.tf
msync-ses/project/code/: msg.html  sqs.py
